clippy_precision.txt
    Checking quyc_client v0.1.0 (/Volumes/samsung_t9/quyc/packages/client)
warning: unused imports: `IpAddr`, `Ipv4Addr`, and `Ipv6Addr`
 --> packages/client/src/protocols/strategy.rs:7:28
  |
7 | use std::net::{SocketAddr, IpAddr, Ipv4Addr, Ipv6Addr};
  |                            ^^^^^^  ^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing fields `local_bind_address` and `preferred_ip_version` in initializer of `protocols::strategy::H3Config`
  --> packages/client/src/protocols/strategy.rs:61:42
   |
61 |                 Box::new(H3Strategy::new(H3Config {
   |                                          ^^^^^^^^ missing `local_bind_address` and `preferred_ip_version`

For more information about this error, try `rustc --explain E0063`.
warning: `quyc_client` (lib test) generated 1 warning (1 duplicate)
error: could not compile `quyc_client` (lib test) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `quyc_client` (lib) generated 1 warning
error: could not compile `quyc_client` (lib) due to 1 previous error; 1 warning emitted
